--- a/style.css
+++ b/style.css
@@ -13,13 +13,15 @@ ul {
   height: 40px;
 }
 li{
+  display: inline;
+  float: left;
   font-family: 'Quicksand', sans-serif;
   text-align: left;
   width: 15%;
   height: 100%;
-  margin-left: 1%;
+  margin-left: 1.5%;
   margin-top: 0.8%;
-  font-size: 18px;
+  font-size: 17px;
   background-color: #ECECEC;
 }
 select{
